# yew_webview_bridge

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: lib.rs
src/js/: invoke_webview.js
