[package]
name = "yew_webview_bridge"
description = "2-way communcation bridge between web-view and yew"
keywords = ["yew", "web-view"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"
repository = "https://github.com/hobofan/yew_webview_bridge"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
rand = { version = "0.7", features = ["wasm-bindgen"] }
log = "0.4"

# frontend
dashmap = { version = "3.11", optional = true }
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
yew = { version = "0.17", optional = true }
web-sys = { version = "0.3", features = ["Window", "External", "Document", "EventTarget", "EventListener", "console", "CustomEvent"], default-features=false, optional = true }
js-sys = { version = "0.3", optional = true }

# backend
web-view = { version = "0.6", optional = true }

[features]
default = []

frontend = ["yew", "wasm-bindgen-futures", "wasm-bindgen", "dashmap", "web-sys", "js-sys"]
backend = ["web-view"]
